make the directory of the sqlite database writable for www-data

--- a/4.2/Dockerfile
+++ b/4.2/Dockerfile
@@ -23,5 +23,7 @@ RUN cd /usr/local/src \
 COPY apache.rt.conf /etc/apache2/sites-available/rt.conf
 RUN a2dissite 000-default.conf && a2ensite rt.conf
 
+RUN chown -R www-data:www-data /opt/rt4/var/
+
 EXPOSE 80
 CMD ["/usr/sbin/apache2","-DFOREGROUND"]
