add a basic RT_SiteConfig.pm

--- a/4.2/Dockerfile
+++ b/4.2/Dockerfile
@@ -25,6 +25,10 @@ RUN a2dissite 000-default.conf && a2ensite rt.conf
 
 RUN chown -R www-data:www-data /opt/rt4/var/
 
+COPY RT_SiteConfig.pm /opt/rt4/etc/RT_SiteConfig.pm
+RUN chown root:www-data /opt/rt4/etc/RT_SiteConfig.pm \
+  && chmod 0640 /opt/rt4/etc/RT_SiteConfig.pm
+
 VOLUME /opt/rt4
 
 EXPOSE 80
