--- a/4.2/apache.rt.conf
+++ b/4.2/apache.rt.conf
@@ -1,3 +1,4 @@
+ServerName localhost
 FastCgiServer /opt/rt4/sbin/rt-server.fcgi -processes 1 -idle-timeout 300
 <VirtualHost _default_:80>
     AddDefaultCharset UTF-8
