--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services: docker
 env:
   - VERSION=4.0
   - VERSION=4.2
+  - VERSION=4.4
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
