--- a/4.0/apache.rt.conf
+++ b/4.0/apache.rt.conf
@@ -1,5 +1,5 @@
 ServerName localhost
-FastCgiServer /opt/rt4/sbin/rt-server.fcgi -processes 1 -idle-timeout 300
+FcgidMaxRequestLen 1073741824
 <VirtualHost _default_:80>
     AddDefaultCharset UTF-8
     DocumentRoot /opt/rt4/share/html
