--- a/4.0/Dockerfile
+++ b/4.0/Dockerfile
@@ -32,6 +32,7 @@ COPY RT_SiteConfig.pm /opt/rt4/etc/RT_SiteConfig.pm
 ENV APACHE_LOCK_DIR=/var/lock/apache2 \
   APACHE_LOG_DIR=/var/log/apache2 \
   APACHE_PID_FILE=/var/run/apache2/apache2.pid \
+  APACHE_RUN_DIR=/var/run/apache2 \
   APACHE_RUN_GROUP=www-data \
   APACHE_RUN_USER=www-data
 
