use the apache2-foreground script from the base image

--- a/4.0/Dockerfile
+++ b/4.0/Dockerfile
@@ -28,15 +28,7 @@ RUN chown -R www-data:www-data /opt/rt4/var/
 
 COPY RT_SiteConfig.pm /opt/rt4/etc/RT_SiteConfig.pm
 
-# /etc/apache2/envvars isn't sourced by default
-ENV APACHE_LOCK_DIR=/var/lock/apache2 \
-  APACHE_LOG_DIR=/var/log/apache2 \
-  APACHE_PID_FILE=/var/run/apache2/apache2.pid \
-  APACHE_RUN_DIR=/var/run/apache2 \
-  APACHE_RUN_GROUP=www-data \
-  APACHE_RUN_USER=www-data
-
 VOLUME /opt/rt4
 
 EXPOSE 80
-CMD ["/usr/sbin/apache2","-DFOREGROUND"]
+CMD ["apache2-foreground"]
