--- a/5.0/Dockerfile
+++ b/5.0/Dockerfile
@@ -5,13 +5,15 @@ LABEL maintainer="Christian Loos <cloos@netsandbox.de>"
 ENV RT_VERSION 5.0.0beta2
 ENV RT_SHA 58687fd1103c04a4f0b622e54d1d4097f36d45aa4d744374add2f76591ceb0ff
 
-RUN cd /usr/local/src \
-  && curl -sSL "https://download.bestpractical.com/pub/rt/devel/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+WORKDIR /usr/local/src
+RUN curl -sSL "https://download.bestpractical.com/pub/rt/devel/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
   && echo "${RT_SHA}  rt.tar.gz" | sha256sum -c \
-  && tar -xzf rt.tar.gz \
-  && cd "rt-${RT_VERSION}" \
-  && ./configure \
-    --disable-gpg --disable-smime --enable-developer --enable-gd --enable-graphviz --with-db-type=SQLite \
+  && tar -xzf rt.tar.gz
+
+WORKDIR /usr/local/src/rt-${RT_VERSION}
+RUN ./configure --disable-gpg --disable-smime --enable-developer --enable-gd --enable-graphviz --with-db-type=SQLite \
   && make install \
   && make initdb \
   && rm -rf /usr/local/src/*
