--- a/4.2/Dockerfile
+++ b/4.2/Dockerfile
@@ -5,13 +5,15 @@ LABEL maintainer="Christian Loos <cloos@netsandbox.de>"
 ENV RT_VERSION 4.2.16
 ENV RT_SHA 1bbe619072b05efb55725c9df851363892b77ad6788dfd28eadce6a8f84a8209
 
-RUN cd /usr/local/src \
-  && curl -sSL "https://download.bestpractical.com/pub/rt/release/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+WORKDIR /usr/local/src
+RUN curl -sSL "https://download.bestpractical.com/pub/rt/release/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
   && echo "${RT_SHA}  rt.tar.gz" | sha256sum -c \
-  && tar -xzf rt.tar.gz \
-  && cd "rt-${RT_VERSION}" \
-  && ./configure \
-    --disable-gpg --disable-smime --enable-developer --enable-gd --enable-graphviz --with-db-type=SQLite \
+  && tar -xzf rt.tar.gz
+
+WORKDIR /usr/local/src/rt-${RT_VERSION}
+RUN ./configure --disable-gpg --disable-smime --enable-developer --enable-gd --enable-graphviz --with-db-type=SQLite \
   && make install \
   && make initdb \
   && rm -rf /usr/local/src/*
