--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,13 +5,15 @@ LABEL maintainer="Christian Loos <cloos@netsandbox.de>"
 ENV RT_VERSION %%RT_VERSION%%
 ENV RT_SHA %%RT_SHA%%
 
-RUN cd /usr/local/src \
-  && curl -sSL "https://download.bestpractical.com/pub/rt/release/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+WORKDIR /usr/local/src
+RUN curl -sSL "https://download.bestpractical.com/pub/rt/release/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
   && echo "${RT_SHA}  rt.tar.gz" | sha256sum -c \
-  && tar -xzf rt.tar.gz \
-  && cd "rt-${RT_VERSION}" \
-  && ./configure \
-    %%RT_CONFIGURE%%
+  && tar -xzf rt.tar.gz
+
+WORKDIR /usr/local/src/rt-${RT_VERSION}
+RUN ./configure %%RT_CONFIGURE%%
   && make install \
   && make initdb \
   && rm -rf /usr/local/src/*
