update update.sh to support alpha and beta releases and RT 5

--- a/apache.rt.conf
+++ b/apache.rt.conf
@@ -2,8 +2,8 @@ ServerName localhost
 FcgidMaxRequestLen 1073741824
 <VirtualHost _default_:80>
     AddDefaultCharset UTF-8
-    DocumentRoot /opt/rt4/share/html
-    ScriptAlias / /opt/rt4/sbin/rt-server.fcgi/
+    DocumentRoot /opt/rt%%RT_VERSION_MAJOR%%/share/html
+    ScriptAlias / /opt/rt%%RT_VERSION_MAJOR%%/sbin/rt-server.fcgi/
     <Location />
         require all granted
     </Location>
