--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -8,7 +8,7 @@ ENV RT_SHA %%RT_SHA%%
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /usr/local/src
-RUN curl -sSL "https://download.bestpractical.com/pub/rt/release/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
+RUN curl -sSL "https://download.bestpractical.com/pub/rt/%%RT_RELEASE%%/rt-${RT_VERSION}.tar.gz" -o rt.tar.gz \
   && echo "${RT_SHA}  rt.tar.gz" | sha256sum -c \
   && tar -xzf rt.tar.gz
 
@@ -21,11 +21,11 @@ RUN ./configure %%RT_CONFIGURE%%
 COPY apache.rt.conf /etc/apache2/sites-available/rt.conf
 RUN a2dissite 000-default.conf && a2ensite rt.conf
 
-RUN chown -R www-data:www-data /opt/rt4/var/
+RUN chown -R www-data:www-data /opt/rt%%RT_VERSION_MAJOR%%/var/
 
-COPY RT_SiteConfig.pm /opt/rt4/etc/RT_SiteConfig.pm
+COPY RT_SiteConfig.pm /opt/rt%%RT_VERSION_MAJOR%%/etc/RT_SiteConfig.pm
 
-VOLUME /opt/rt4
+VOLUME /opt/rt%%RT_VERSION_MAJOR%%
 
 COPY docker-entrypoint.sh /usr/local/bin/
 
