--- a/5.0/apache.rt.conf
+++ b/5.0/apache.rt.conf
@@ -4,6 +4,7 @@ FcgidMaxRequestLen 1073741824
     AddDefaultCharset UTF-8
     DocumentRoot /opt/rt5/share/html
     ScriptAlias / /opt/rt5/sbin/rt-server.fcgi/
+    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     <Location />
         require all granted
     </Location>
