add Apache configuration for token authentication
https://docs.bestpractical.com/rt/5.0.0/authentication.html#Token-Authentication

Closes #7

--- a/4.2/apache.rt.conf
+++ b/4.2/apache.rt.conf
@@ -4,6 +4,7 @@ FcgidMaxRequestLen 1073741824
     AddDefaultCharset UTF-8
     DocumentRoot /opt/rt4/share/html
     ScriptAlias / /opt/rt4/sbin/rt-server.fcgi/
+    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     <Location />
         require all granted
     </Location>
