--- a/apache.rt.conf
+++ b/apache.rt.conf
@@ -4,6 +4,7 @@ FcgidMaxRequestLen 1073741824
     AddDefaultCharset UTF-8
     DocumentRoot /opt/rt%%RT_VERSION_MAJOR%%/share/html
     ScriptAlias / /opt/rt%%RT_VERSION_MAJOR%%/sbin/rt-server.fcgi/
+    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     <Location />
         require all granted
     </Location>
