--- a/4.4/apache.rt.conf
+++ b/4.4/apache.rt.conf
@@ -4,6 +4,7 @@ FcgidMaxRequestLen 1073741824
     AddDefaultCharset UTF-8
     DocumentRoot /opt/rt4/share/html
     ScriptAlias / /opt/rt4/sbin/rt-server.fcgi/
+    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     <Location />
         require all granted
     </Location>
