add --enable-externalauth for RT 4.4 and 5.0

--- a/4.4/Dockerfile
+++ b/4.4/Dockerfile
@@ -15,6 +15,7 @@ RUN ./configure \
     --disable-gpg \
     --disable-smime \
     --enable-developer \
+    --enable-externalauth \
     --enable-gd \
     --enable-graphviz \
     --with-db-type=SQLite \
