--- a/.github/workflows/publish-dockerimage.yml
+++ b/.github/workflows/publish-dockerimage.yml
@@ -17,6 +17,9 @@ jobs:
           - '5.0'
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
