update Dockerfile to improve image size

--- a/4.2/Dockerfile
+++ b/4.2/Dockerfile
@@ -8,12 +8,11 @@ LABEL org.opencontainers.image.source="https://github.com/netsandbox/docker-rt"
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /usr/local/src
-RUN curl -sSL "https://download.bestpractical.com/pub/rt/release/rt-4.2.17.tar.gz" -o rt.tar.gz \
+RUN curl -fsSL "https://download.bestpractical.com/pub/rt/release/rt-4.2.17.tar.gz" -o rt.tar.gz \
   && echo "177b7e004b90ec7faaac8e21e11b7bc33bd129aba2d512e4b011c37995f8480c  rt.tar.gz" | sha256sum -c \
-  && tar -xzf rt.tar.gz
-
-WORKDIR /usr/local/src/rt-4.2.17
-RUN ./configure \
+  && tar -xzf rt.tar.gz \
+  && cd rt-4.2.17 \
+  && ./configure \
     --disable-gpg \
     --disable-smime \
     --enable-developer \
@@ -22,10 +21,11 @@ RUN ./configure \
     --with-db-type=SQLite \
     --with-web-handler=standalone \
   && make install \
-  && make initdb \
-  && rm -rf /usr/local/src/*
+  && make initialize-database \
+  && cd .. && rm -rf /usr/local/src/*
 
-COPY RT_SiteConfig.pm /opt/rt4/etc/RT_SiteConfig.pm
+WORKDIR /opt/rt4
+COPY RT_SiteConfig.pm etc/
 
 VOLUME /opt/rt4
 
