--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -8,12 +8,11 @@ LABEL org.opencontainers.image.source="https://github.com/netsandbox/docker-rt"
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /usr/local/src
-RUN curl -sSL "https://download.bestpractical.com/pub/rt/%%RT_RELEASE%%/rt-%%RT_VERSION%%.tar.gz" -o rt.tar.gz \
+RUN curl -fsSL "https://download.bestpractical.com/pub/rt/%%RT_RELEASE%%/rt-%%RT_VERSION%%.tar.gz" -o rt.tar.gz \
   && echo "%%RT_SHA%%  rt.tar.gz" | sha256sum -c \
-  && tar -xzf rt.tar.gz
-
-WORKDIR /usr/local/src/rt-%%RT_VERSION%%
-RUN ./configure \
+  && tar -xzf rt.tar.gz \
+  && cd rt-%%RT_VERSION%% \
+  && ./configure \
     --disable-gpg \
     --disable-smime \
     --enable-developer \
@@ -23,10 +22,11 @@ RUN ./configure \
     --with-db-type=SQLite \
     --with-web-handler=standalone \
   && make install \
-  && make initdb \
-  && rm -rf /usr/local/src/*
+  && make initialize-database \
+  && cd .. && rm -rf /usr/local/src/*
 
-COPY RT_SiteConfig.pm /opt/rt%%RT_VERSION_MAJOR%%/etc/RT_SiteConfig.pm
+WORKDIR /opt/rt%%RT_VERSION_MAJOR%%
+COPY RT_SiteConfig.pm etc/
 
 VOLUME /opt/rt%%RT_VERSION_MAJOR%%
 
