make hadolint happy

--- a/4.2/Dockerfile
+++ b/4.2/Dockerfile
@@ -8,6 +8,7 @@ LABEL org.opencontainers.image.source="https://github.com/netsandbox/docker-rt"
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 WORKDIR /usr/local/src
+# hadolint ignore=DL3003
 RUN curl -fsSL "https://download.bestpractical.com/pub/rt/release/rt-4.2.17.tar.gz" -o rt.tar.gz \
   && echo "177b7e004b90ec7faaac8e21e11b7bc33bd129aba2d512e4b011c37995f8480c  rt.tar.gz" | sha256sum -c \
   && tar -xzf rt.tar.gz \
