--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,10 @@ on:
 jobs:
   main:
     name: RT ${{ matrix.rt }} Tag ${{ matrix.tag }}
-
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
 
     strategy:
       fail-fast: false
@@ -28,29 +30,29 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push RT ${{ matrix.rt }} Tag ${{ matrix.tag }} DockerHub
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ${{ matrix.rt }}/
           file: ${{ matrix.rt }}/Dockerfile
@@ -60,7 +62,7 @@ jobs:
           tags: netsandbox/request-tracker:${{ matrix.tag }}
 
       - name: Build and push RT ${{ matrix.rt }} Tag ${{ matrix.tag }} GitHub Container Registry
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           build-args: IMAGE=ghcr.io/netsandbox/request-tracker-base
           context: ${{ matrix.rt }}/
