--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,35 +8,32 @@ on:
   schedule:
     - cron: '44 4 * * 0'
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  packages: write
+
 jobs:
-  main:
-    name: RT ${{ matrix.rt }} Tag ${{ matrix.tag }}
+  build:
+    name: RT ${{ matrix.version }}
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
 
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - rt: '4.2'
-            tag: '4.2'
-          - rt: '4.4'
-            tag: '4.4'
-          - rt: '5.0'
-            tag: '5.0'
-          - rt: '5.0'
-            tag: latest
+        version:
+          - '4.2'
+          - '4.4'
+          - '5.0'
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
+      - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
@@ -52,23 +49,43 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push RT ${{ matrix.rt }} Tag ${{ matrix.tag }} Docker Hub
+      - name: Extract Docker Hub metadata
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: netsandbox/request-tracker
+          tags: |
+            type=raw,value=${{ matrix.version }}
+            type=raw,value=latest,enable=${{ matrix.version == '5.0' }}
+
+      - name: Extract GitHub Container Registry metadata
+        id: meta_ghcr
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/request-tracker
+          tags: |
+            type=raw,value=${{ matrix.version }}
+            type=raw,value=latest,enable=${{ matrix.version == '5.0' }}
+
+      - name: Build and push Docker Hub
         uses: docker/build-push-action@v3
         with:
-          context: ${{ matrix.rt }}/
-          file: ${{ matrix.rt }}/Dockerfile
+          context: ${{ matrix.version }}/
+          file: ${{ matrix.version }}/Dockerfile
           no-cache: true
           pull: true
           push: true
-          tags: netsandbox/request-tracker:${{ matrix.tag }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and push RT ${{ matrix.rt }} Tag ${{ matrix.tag }} GitHub Container Registry
+      - name: Build and push GitHub Container Registry
         uses: docker/build-push-action@v3
         with:
           build-args: IMAGE=ghcr.io/netsandbox/request-tracker-base
-          context: ${{ matrix.rt }}/
-          file: ${{ matrix.rt }}/Dockerfile
+          context: ${{ matrix.version }}/
+          file: ${{ matrix.version }}/Dockerfile
           no-cache: true
           pull: true
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/request-tracker:${{ matrix.tag }}
+          tags: ${{ steps.meta_ghcr.outputs.tags }}
+          labels: ${{ steps.meta_ghcr.outputs.labels }}
