--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ concurrency:
 
 permissions:
   contents: read
+  id-token: write
   packages: write
 
 jobs:
@@ -68,6 +69,7 @@ jobs:
             type=raw,value=latest,enable=${{ matrix.version == '5.0' }}
 
       - name: Build and push Docker Hub
+        id: build-and-push
         uses: docker/build-push-action@v3
         with:
           context: ${{ matrix.version }}/
@@ -79,6 +81,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push GitHub Container Registry
+        id: build-and-push-ghcr
         uses: docker/build-push-action@v3
         with:
           build-args: IMAGE=ghcr.io/netsandbox/request-tracker-base
@@ -89,3 +92,16 @@ jobs:
           push: true
           tags: ${{ steps.meta_ghcr.outputs.tags }}
           labels: ${{ steps.meta_ghcr.outputs.labels }}
+
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v2
+
+      - name: Sign the published Docker Hub images
+        run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
+        env:
+          COSIGN_EXPERIMENTAL: true
+
+      - name: Sign the published GitHub Container Registry images
+        run: echo "${{ steps.meta_ghcr.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push-ghcr.outputs.digest }}
+        env:
+          COSIGN_EXPERIMENTAL: true
