--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            netsandbox/request-tracker
+            ghcr.io/netsandbox/request-tracker
+          tags: |
+            type=raw,value=${{ matrix.version }}
+            type=raw,value=latest,enable=${{ matrix.version == '5.0' }}
+
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
 
@@ -50,25 +61,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract Docker Hub metadata
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: netsandbox/request-tracker
-          tags: |
-            type=raw,value=${{ matrix.version }}
-            type=raw,value=latest,enable=${{ matrix.version == '5.0' }}
-
-      - name: Extract GitHub Container Registry metadata
-        id: meta_ghcr
-        uses: docker/metadata-action@v4
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/request-tracker
-          tags: |
-            type=raw,value=${{ matrix.version }}
-            type=raw,value=latest,enable=${{ matrix.version == '5.0' }}
-
-      - name: Build and push Docker Hub
+      - name: Build and push
         id: build-and-push
         uses: docker/build-push-action@v4
         with:
@@ -80,29 +73,11 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and push GitHub Container Registry
-        id: build-and-push-ghcr
-        uses: docker/build-push-action@v4
-        with:
-          build-args: IMAGE=ghcr.io/netsandbox/request-tracker-base
-          context: ${{ matrix.version }}/
-          file: ${{ matrix.version }}/Dockerfile
-          no-cache: true
-          pull: true
-          push: true
-          tags: ${{ steps.meta_ghcr.outputs.tags }}
-          labels: ${{ steps.meta_ghcr.outputs.labels }}
-
       - name: Install cosign
         uses: sigstore/cosign-installer@v2
 
       - name: Sign the published Docker Hub images
         run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
-        env:
-          COSIGN_EXPERIMENTAL: true
-
-      - name: Sign the published GitHub Container Registry images
-        run: echo "${{ steps.meta_ghcr.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push-ghcr.outputs.digest }}
         env:
           COSIGN_EXPERIMENTAL: true
 
