--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,9 @@ jobs:
             type=raw,value=${{ matrix.version }}
             type=raw,value=latest,enable=${{ matrix.version == '5.0' }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@v2
 
@@ -68,6 +71,7 @@ jobs:
           context: ${{ matrix.version }}/
           file: ${{ matrix.version }}/Dockerfile
           no-cache: true
+          platforms: linux/amd64,linux/arm64
           pull: true
           push: true
           tags: ${{ steps.meta.outputs.tags }}
