Add RT_WEB_DOMAIN RT_REDIRECT_URLS RT_DEFAULT_PASSWORD
Add support to set default password from ENV
Add support to set $WebDomain
Add support to set $CanonicalizeRedirectURLs

--- a/5.0/Dockerfile
+++ b/5.0/Dockerfile
@@ -28,6 +28,7 @@ RUN curl -fsSL "https://download.bestpractical.com/pub/rt/release/rt-5.0.5.tar.g
 
 WORKDIR /opt/rt5
 COPY RT_SiteConfig.pm etc/
+COPY rt-passwd-from-env sbin/
 
 VOLUME /opt/rt5
 
