--- a/4.4/Dockerfile
+++ b/4.4/Dockerfile
@@ -1,3 +1,5 @@
+#checkov:skip=CKV_DOCKER_2:Ensure that HEALTHCHECK instructions have been added to container images
+#checkov:skip=CKV_DOCKER_3:Ensure that a user for the container has been created
 ARG IMAGE=netsandbox/request-tracker-base
 ARG TAG=latest
 FROM ${IMAGE}:${TAG}
