--- a/4.4/Dockerfile
+++ b/4.4/Dockerfile
@@ -8,19 +8,20 @@ LABEL org.opencontainers.image.authors="Christian Loos <cloos@netsandbox.de>"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-RUN gpg --keyserver keyserver.ubuntu.com --recv-keys C49B372F2BF84A19011660270DF0A283FEAC80B2 \
-  && gpg --list-keys
-
 WORKDIR /usr/local/src
 
 # hadolint ignore=DL3003,SC2174
-RUN curl -fsSL \
-    -o rt.tar.gz https://download.bestpractical.com/pub/rt/release/rt-4.4.7.tar.gz \
-    -o rt.tar.gz.asc https://download.bestpractical.com/pub/rt/release/rt-4.4.7.tar.gz.asc \
-  && gpg --verify rt.tar.gz.asc rt.tar.gz \
+RUN curl -fsSL -o rt.tar.gz https://download.bestpractical.com/pub/rt/release/rt-4.4.7.tar.gz \
+  && if [[ "https://download.bestpractical.com/pub/rt/release/rt-4.4.7.tar.gz" =~ ^https://download.bestpractical.com/pub/rt/ ]]; then \
+    curl -fsSL -o rt.tar.gz.asc https://download.bestpractical.com/pub/rt/release/rt-4.4.7.tar.gz.asc; \
+    gpg --keyserver keyserver.ubuntu.com --recv-keys C49B372F2BF84A19011660270DF0A283FEAC80B2; \
+    gpg --list-keys; \
+    gpg --verify rt.tar.gz.asc rt.tar.gz; \
+  fi \
   && tar -xzf rt.tar.gz \
-  && cd rt-4.4.7 \
-  && ./configure \
+  && cd rt-* \
+  && ./configure.ac \
+    --prefix=/opt/rt \
     --enable-developer \
     --enable-externalauth \
     --enable-gd \
@@ -30,17 +31,17 @@ RUN curl -fsSL \
     --with-db-type=SQLite \
     --with-web-handler=standalone \
   && make install \
-  && mkdir --mode=0600 --parents /opt/rt4/var/data/{gpg,smime} \
+  && mkdir --mode=0600 --parents /opt/rt/var/data/{gpg,smime} \
   && make initialize-database \
   && cd .. && rm -rf /usr/local/src/*
 
-WORKDIR /opt/rt4
+WORKDIR /opt/rt
 COPY RT_SiteConfig.pm etc/
 
-VOLUME /opt/rt4
+VOLUME /opt/rt
 
 COPY docker-entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 80
-CMD ["/opt/rt4/sbin/rt-server"]
+CMD ["/opt/rt/sbin/rt-server"]
