--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -8,19 +8,21 @@ LABEL org.opencontainers.image.authors="Christian Loos <cloos@netsandbox.de>"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-RUN gpg --keyserver keyserver.ubuntu.com --recv-keys C49B372F2BF84A19011660270DF0A283FEAC80B2 \
-  && gpg --list-keys
-
 WORKDIR /usr/local/src
 
 # hadolint ignore=DL3003,SC2174
-RUN curl -fsSL \
-    -o rt.tar.gz https://download.bestpractical.com/pub/rt/%%RT_RELEASE%%/rt-%%RT_VERSION%%.tar.gz \
-    -o rt.tar.gz.asc https://download.bestpractical.com/pub/rt/%%RT_RELEASE%%/rt-%%RT_VERSION%%.tar.gz.asc \
-  && gpg --verify rt.tar.gz.asc rt.tar.gz \
+RUN curl -fsSL -o rt.tar.gz %%RT_URL%% \
+  && if [[ "%%RT_URL%%" =~ ^https://download.bestpractical.com/pub/rt/ ]]; then \
+    curl -fsSL -o rt.tar.gz.asc %%RT_URL%%.asc; \
+    gpg --keyserver keyserver.ubuntu.com --recv-keys C49B372F2BF84A19011660270DF0A283FEAC80B2; \
+    gpg --list-keys; \
+    gpg --verify rt.tar.gz.asc rt.tar.gz; \
+  fi \
   && tar -xzf rt.tar.gz \
-  && cd rt-%%RT_VERSION%% \
-  && ./configure \
+  && cd rt-* \
+  && echo "%%RT_VERSION_TAG%%.$(date -I)" > .tag \
+  && ./configure.ac \
+    --prefix=/opt/rt \
     --enable-developer \
     --enable-externalauth \
     --enable-gd \
@@ -29,18 +31,19 @@ RUN curl -fsSL \
     --enable-smime \
     --with-db-type=SQLite \
     --with-web-handler=standalone \
+  && RT_FIX_DEPS_CMD=cpanm make fixdeps && rm -rf /root/.cpanm \
   && make install \
-  && mkdir --mode=0600 --parents /opt/rt%%RT_VERSION_MAJOR%%/var/data/{gpg,smime} \
+  && mkdir --mode=0600 --parents /opt/rt/var/data/{gpg,smime} \
   && make initialize-database \
   && cd .. && rm -rf /usr/local/src/*
 
-WORKDIR /opt/rt%%RT_VERSION_MAJOR%%
+WORKDIR /opt/rt
 COPY RT_SiteConfig.pm etc/
 
-VOLUME /opt/rt%%RT_VERSION_MAJOR%%
+VOLUME /opt/rt
 
 COPY docker-entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 80
-CMD ["/opt/rt%%RT_VERSION_MAJOR%%/sbin/rt-server"]
+CMD ["/opt/rt/sbin/rt-server"]
